--- a/Belote2023/pom.xml
+++ b/Belote2023/pom.xml
@@ -11,6 +11,15 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
+        <dependencies>
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>2.2.9</version>
+            </dependency>
+        </dependencies>
+
     </properties>
-    
+
 </project>
