--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: 8
+        java-version: '8'
+        distribution: 'temurin'
 
     - name: Build project with Maven
       run: mvn package --file pom.xml
