--- a/Belote2023/pom.xml
+++ b/Belote2023/pom.xml
@@ -23,6 +23,15 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <reportOutputDirectory>../javadoc</reportOutputDirectory>
+                    <destDir>.</destDir>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
