--- a/Belote2023/pom.xml
+++ b/Belote2023/pom.xml
@@ -28,7 +28,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
-                    <reportOutputDirectory>../javadoc</reportOutputDirectory>
+                    <reportOutputDirectory>../docs</reportOutputDirectory>
                     <destDir>.</destDir>
                 </configuration>
             </plugin>
