--- a/Belote2023/pom.xml
+++ b/Belote2023/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>hsqldb</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
