--- a/Belote2023/pom.xml
+++ b/Belote2023/pom.xml
@@ -18,7 +18,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.github.itellijlover.Belote</mainClass>
+                            <mainClass>com.github.itellijlover.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
