--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,4 +20,4 @@ jobs:
         distribution: 'temurin'
 
     - name: Test project with Maven
-      run: mvn surefire:test --file Belote2023/pom.xml
+      run: mvn --batch-mode --update-snapshots verify --file Belote2023/pom.xml
